[package]
name = "lumina_guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- GRAPHICS & MATH ---
eframe = "0.22.0"
egui = "0.22.0"
rand = "0.8"

# --- THE GOLDEN KEY (Fixes the Build Crash) ---
# This tells Rust to use JavaScript's crypto.getRandomValues()
getrandom = { version = "0.2", features = ["js"] }

# --- LOGIC & STATE ---
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# --- WEB INFRASTRUCTURE ---
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
]
