[package]
name = "lumina_guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Visual Engine (Upgraded to Latest Stable)
egui = "0.27.2"
eframe = "0.27.2"

# Math & Logic
rand = "0.8"
log = "0.4"

# Web Specific Tools (CRITICAL FOR BROWSER)
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] } # Required for randomization in browser
