[package]
name = "lumina_guardian"
version = "0.2.1"
edition = "2021"

# OPTIMIZATION PROFILE: TITAN RANK
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# THE METAL (Graphics Engine)
eframe = { version = "0.31", features = ["glow", "persistence"] }
egui = "0.31"

# THE MATH (Procedural Generation)
rand = "0.9"

# === THE FIX: ENTROPY GENERATOR ===
# This tells Rust: "Use the Browser to generate random numbers"
getrandom = { version = "0.3", features = ["wasm_js"] }

# THE UTILS (Browser Bridge)
log = "0.4"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "SpeechSynthesis", "SpeechSynthesisUtterance"] }
